--- a/_posts/2000-01-03-officers.md
+++ b/_posts/2000-01-03-officers.md
@@ -5,53 +5,27 @@ color: black
 fa-icon: toggle-on
 ---
 
-## Setup as user homepage
+## Officer Leadership
 
-- Go click **fork** on the [github project page](https://github.com/t413/SinglePaged)
-- Rename your new repository to `**username**.github.io`. (click settings in the right column)
-- Clone your repository, **cd into the project**
-- Run `git checkout publish && git branch -m master && git push -u origin master && git branch -D gh-pages` to get the *publish* branch as master for a clean, empty starting point.
-- On your github project page go to *settings* again and change your **default branch** to ***master***
-- Run `git push origin --delete gh-pages` to delete your remote's development branch
+Spring 2017 saw us taking sequential steps to establish our new student chapter on campus and in the [LIS Program](http://sislt.missouri.edu/lis/). To facilitate communication we maintain a:
+- [Twitter](https://twitter.com/SAAMUSC) profile (est. 12/5/16)
+- [listserv](https://po.missouri.edu/cgi-bin/wa?A0=SAAMUSC-L) (est. 1/31/17)
+- [MU ORG](https://orgsync.com/158099/chapter) profile (est. 4/14/17)
+- [website](https://saamusc.github.io/) (est. 4/11/17)
+We also drafted and then voted on bylaws, approved on 2/18/17 by the membership:
+- [SAAMUSC Constitution](/img/SAAMUSC_Constitution.pdf)
+In sum, we attended an info session on [1/24](https://orgsync.com/35463/events/1505629/occurrences/3427731) and [4/17](https://orgsync.com/35463/events/1516284/occurrences/3904497), applied for recognition by the MU ORG Office on 2/20 (approved! on 3/23), voted on officers from Mar 6-9, seated our elected, inaugural officers on Mon Mar 13, and submitted our materials to [SAA Council](http://www2.archivists.org/governance/handbook/section13) for consideration at their [May 16-17, 2017](http://www2.archivists.org/groups/saa-council/may-16-17-2017-council-meeting-agenda) meeting.
 
-Now hop over to [Usage](#usage) to get it running with your own stuff!
+**Below are our `Officers`**
 
-**When you publish changes use `git push -u origin master`**
+-------------------------
+
+2017:
+- Jennifer Walker ('President'), Alora Bauer ('Vice President'), Erin Niederberger ('Secretary'), Brian Flanagin ('Treasurer'), Katie Wibbenmeyer ('LISGSA Liaison'), & Dylan Martin ('Communication Chair'). [Sarah Buchanan](http://faculty.missouri.edu/buchanans/) is Faculty Advisor.
+
+Thank you for your interest and support!
 
 -------------------------
 
 
-## Setup as standalone project page
-
-- Go click **fork** on the [github project page](https://github.com/t413/SinglePaged)
-- Rename your new repository to `whatever you want`. (click settings in the right column)
-  * It will go live at yourusername.github.io/**WhateverYouWant**
-- Clone your repository, cd into the project
-- Run `git checkout publish && git branch -D gh-pages && git branch -m gh-pages && git push -uf origin gh-pages` to swap the *publish* and *gh-pages* branch.
-
-Now hop over to [Usage](#usage) to get it running with your own stuff!
-
-**When you publish changes use `git push -u origin gh-pages`**
-
--------------------------
-
-
-## Setup inside existing project
-
-This is the most complicated use-case .. but it's the coolest.
-Say you've got your kickass project `github.com/t413/kicker` and want to have
-some web presence to post about on [hacker news](http://news.ycombinator.com).
-This will create an orphan branch called `gh_pages` in your repository
-where you can publish changes, posts, images, and such. It won't alter your code at all.
-
-- `cd` into your project on the command line
-- use `git remote add -t publish singlepage git@github.com:t413/SinglePaged.git` to get access to this repository.
-- use `git fetch singlepage publish:gh-pages` to fetch the remote branch
-- use `git branch --set-upstream gh-pages singlepage/publish && git checkout gh-pages;`
-  This creates and checks out an orphan branch called gh-pages that tracks the original and lets you make changes.
-- When you run `git push gh-pages:origin/gh-pages` it'll be live at *yourusername.github.io/repositoryName*
-
-Now hop over to [Usage](#usage) to get it running with your own stuff!
-
-**When you publish changes use `git push -u origin gh-pages`**
 
