added tips for updating page text

--- a/_posts/2000-01-03-officers.md
+++ b/_posts/2000-01-03-officers.md
@@ -1,3 +1,6 @@
+<!Sarah's random tips for updating in the future: Don't touch the title/bg/color etc. Have the live page open so you can visualize what the text will look like. Keyboard character to make the code text is not the apostrophe but the acute (usu same button as the tilde~. Two hashtag/numbers to Bold. One dash to make a list. Hit an Extra return to exit out of the list back to paragraph text. Insert Hyperlink by: bracketing the words to be hyperlinked then without a space put the link in parentheses. Upload event flyers and/or JPEG's by first uploading it with a simple short filename to our img folder then linking to that concisely with /img/filename.jpg.)
+-->
+
 ---
 title: "officers"
 bg: orange
@@ -22,8 +25,8 @@ In sum, we attended an info session on [1/24](https://orgsync.com/35463/events/1
 
 -------------------------
 
-2017:
-- Jennifer Walker ('President'), Alora Bauer ('Vice President'), Erin Niederberger ('Secretary'), Brian Flanagin ('Treasurer'), Katie Wibbenmeyer ('LISGSA Liaison'), & Dylan Martin ('Communication Chair'). [Sarah Buchanan](http://faculty.missouri.edu/buchanans/) is Faculty Advisor.
+**2017**:
+- Jennifer Walker (`President`), Alora Bauer (`Vice President`), Erin Niederberger (`Secretary`), Brian Flanagin (`Treasurer`), Katie Wibbenmeyer (`LISGSA Liaison`), & Dylan Martin (`Communication Chair`). [Sarah Buchanan](http://faculty.missouri.edu/buchanans/) is Faculty Advisor.
 
 Thank you for your interest and support!
 
