--- a/_posts/2000-01-05-join.md
+++ b/_posts/2000-01-05-join.md
@@ -5,59 +5,36 @@ color: white
 fa-icon: plug
 ---
 
-Alright, you've got a clean copy and are ready to push some schmancy pages for the world to ogle at.
+We welcome you to join us in SAAMUSC! As stated in our Constitution, membership is open to any currently enrolled student or employee of the University of Missouri. All individual SAA members in good standing shall also be eligible for membership in SAAMUSC. Alumni of any SISLT program are welcome to attend our events and meetings.
 
-- Edit `_config.yml` to change your title, keywords, and description.
-- Create a new file in `_posts/` called `2014-01-01-intro.md`
-  Edit it, and add:
+- Contact current `officers` (Secretary) to join SAAMUSC
+- Below we provide links to further information about enrolling in SISLT and joining SAA:
+
+{% highlight text linenos=table %}
+program: [Library and Information Science program](http://sislt.missouri.edu/lis/academics/), School of Information Science & Learning Technologies, in the College of Education at the University of Missouri
+apply: [Master's degree](http://sislt.missouri.edu/lis/students/#apply) in Information Science and Learning Tehnologies
+enroll: view courses and enroll at [myZou](http://sislt.missouri.edu/lis/students/#enroll)
+
+apply: [Ph.D.](http://sislt.missouri.edu/islt/) in Information Science and Learning Tehnologies
+enroll: view courses and enroll at [myZou](http://sislt.missouri.edu/lis/students/#enroll)
+---
+{% endhighlight %}
+
+- Join SAA as a student or individual member:
 
 {% highlight text linenos=table %}
 ---
-title: "home"
-bg: white     #defined in _config.yml, can use html color like '#010101'
-color: black  #text color
-style: center
+read: [Student Resources](http://archivists.org/students) and [Student Chapter Directory](http://archivists.org/students/chapters)
+join: [SAA Student Discussion List](http://archivists.org/listservs)
+join: SAA [Student Membership](http://archivists.org/membership/student) for $52 annually
+present: SAA Annual Meeting [Student Paper and Poster Presentations](http://www2.archivists.org/conference) proposals due in February
+attend: [SAA Annual Meeting](http://www2.archivists.org/conference) usu. in August
 ---
-
-# Example headline!
-and so on..
 {% endhighlight %}
 
-- Create a second post called `2014-01-02-art.md` with an divider image this time:
+In addition to an archives and records management specialization (of archives courses) within the LIS master's program, students complete a [Practicum](http://sislt.missouri.edu/lis/practicum/#practicum).
 
-{% highlight text linenos=table %}
----
-title: "Art"
-bg: turquoise  #defined in _config.yml, can use html color like '#0fbfcf'
-color: white   #text color
-fa-icon: paint-brush
----
-
-#### A new section- oh the humanity!
-{% endhighlight %}
-
-**Note:** That part `fa-icon: paint-brush` will use a font-awesome icon of [paint-brush](http://fortawesome.github.io/Font-Awesome/icon/paint-brush/). You can use any icon from this [font-awesome icon directory](http://fortawesome.github.io/Font-Awesome/icons/).
-
-- install Jekyll with `sudo gem install github-pages`
-- run `jekyll serve -w`
-  - visit [localhost:4000](http://localhost:4000) to see a live locally served preview.
-- Push changes and see them live!
-
-
-
-
-## **Changing your colors**
-{: style="margin-top:100px;"}
-
-- In each post file you can define `bg: mycolor` and `color: myothercolor` to change the background and text colors for that section.
-- **mycolor** can be a quoted html color like `'#0fbfcf'` or a key to a special color defined in **_config.yml** under 'colors'.
-  - **Note:** Changes to _config.yml require a manual restart to your local server with `^C` and `jekyll serve -w`.
-
-Nifty, right!
-
-
-
-### Also see **README.md** [*on github!*](https://github.com/t413/SinglePaged#usage)
+### We look forward to meeting you!**
 {: style="margin-top:100px;"}
 
 
