mizzou named mizzoumade with video

--- a/_posts/2000-01-07-mizzou.md
+++ b/_posts/2000-01-07-mizzou.md
@@ -5,19 +5,14 @@ color: white
 fa-icon: film
 ---
 
-Having an **embedded media** (photos and video) is often inflexible with a dynamic and **responsive design**.
+## #mizzoumade
 
-### Embed your video like this:
-{: .left}
+SISLT graduate courses in the Archives and Records Management specialization adhere to the SAA Guidelines for a Graduate Program in Archival Studies [[GPAS](http://www2.archivists.org/category/tags/gpas)].
 
-{% highlight html linenos=table %}
-<div class="icontain">
-  <iframe src="//www.youtube.com/embed/8yis7GzlXNM" allowfullscreen></iframe>
-</div>
-{% endhighlight %}
+The Library and Information Science program at Mizzou celebrates its [50th anniversary](http://sislt.missouri.edu/lis/#program-history) in 2016-17. We launched our celebration at the [SISLT Reception](http://sislt.missouri.edu/sislt_events/sislt-reception-at-mla/), [MLA 2016](http://molib.org/conference/2016-conference/).
 
-It'll play like this funny video below! Try resizing the page!
+Archival institutions on Mizzou's campus include the [University Archives](http://muarchives.missouri.edu/), the [State Historical Society of Missouri](http://shsmo.org/about/columbia/) in Columbia, and the UM System [Records Management Office](https://www.umsystem.edu/ums/fa/management/records/about), among others!
 
-Photo layouts are also really cool and dynamically resizable. Check out the photos/gallery section at [magiciansanfrancisco.com](http://magiciansanfrancisco.com) for a demo and see [the source code](https://github.com/strongrobert/MagicianSanFrancisco) for how.
+*Archives Change Lives!* Check out the video which premiered at ARCHIVES 2015 [opening plenary](http://archivists.org/am2015/opening-plenary-video#.WQ_pIdorKUk) in Cleveland:
 
-<div class="icontain"><iframe src="//www.youtube.com/embed/8yis7GzlXNM" allowfullscreen></iframe></div>
+<div class="icontain"><iframe src="//www.youtube.com/embed/HXI5G9ptXxo" allowfullscreen></iframe></div>
