--- a/_posts/2000-01-07-mizzou.md
+++ b/_posts/2000-01-07-mizzou.md
@@ -17,4 +17,6 @@ Archival institutions on Mizzou's campus include the [University Archives](http:
 
 <div class="icontain"><iframe src="//www.youtube.com/embed/HXI5G9ptXxo" allowfullscreen></iframe></div>
 
-[Contact us](mailto:SAAMUSC@gmail.com) anytime!
+
+
+# [Contact us](mailto:SAAMUSC@gmail.com) anytime!! ~ Thank you ~
