annual report, charter 2017

--- a/_posts/2000-01-03-officers.md
+++ b/_posts/2000-01-03-officers.md
@@ -13,11 +13,12 @@ Spring 2017 saw us taking sequential steps to establish our new student chapter 
 - [MU ORG](https://orgsync.com/158099/chapter) profile (est. 4/14/17)
 - [email](mailto:SAAMUSC@gmail.com) account (est. 4/14/17)
 - [website](https://saamusc.github.io/) (est. 4/11/17)
+- [SAA Student Chapter](https://www2.archivists.org/students/chapters/university-of-missouri) profile (est. 5/22/17)
 
 We also drafted and then voted on bylaws, approved on 2/18/17 by the membership:
 - [SAAMUSC Constitution](/img/SAAMUSC_Constitution.pdf)
 
-In sum, we attended an info session on [1/24](https://orgsync.com/35463/events/1505629/occurrences/3427731) and [4/17](https://orgsync.com/35463/events/1516284/occurrences/3904497), applied for recognition by the MU ORG Office on 2/20 (approved! on 3/23), voted on officers from Mar 6-9, seated our elected, inaugural officers on Mon Mar 13, and submitted our materials to [SAA Council](http://www2.archivists.org/governance/handbook/section13) for consideration at their [May 16-17, 2017](http://www2.archivists.org/groups/saa-council/may-16-17-2017-council-meeting-agenda) meeting.
+In sum, we attended an info session on [1/24](https://orgsync.com/35463/events/1505629/occurrences/3427731) and [4/17](https://orgsync.com/35463/events/1516284/occurrences/3904497), applied for recognition by the MU ORG Office on 2/20 (approved! on 3/23), voted on officers from Mar 6-9, seated our elected, inaugural officers on Mon Mar 13, and submitted our materials to [SAA Council](http://www2.archivists.org/governance/handbook/section13) for consideration at their [May 16-17, 2017](http://www2.archivists.org/groups/saa-council/may-16-17-2017-council-meeting-agenda) meeting (chartered! [on 5/16](https://www2.archivists.org/news/2017/saa-council-approves-fy18-budget-issue-briefs-and-more)).
 
 **Below are our `Officers`**
 
@@ -25,6 +26,7 @@ In sum, we attended an info session on [1/24](https://orgsync.com/35463/events/1
 
 **2017**:
 - Jennifer Walker (`President`), Alora Bauer (`Vice President`), Erin Niederberger (`Secretary`), Brian Flanagin (`Treasurer`), Katie Wibbenmeyer (`LISGSA Liaison`), & Dylan Martin (`Communication Chair`). [Sarah Buchanan](http://faculty.missouri.edu/buchanans/) is Faculty Advisor.
+- Annual Report, [May 31, 2017](https://saamusc.github.io/img/SAA_MissouriU_2016_2017.pdf).
 
 Thank you for your interest and support!
 
