--- a/_posts/2000-01-03-officers.md
+++ b/_posts/2000-01-03-officers.md
@@ -7,6 +7,18 @@ fa-icon: toggle-on
 
 ## Leadership
 
+**2018**:
+- Rebecca Benson (`President`), Elizabeth Winter (`Vice President`), Alisa Pappas (`Secretary`), Melody Edwards (`Treasurer`), Brian Flanagin (`Communication Chair`), & Hali Allen + Jennifer Walker (`Programming Co-Chairs`). [Sarah Buchanan](http://faculty.missouri.edu/buchanans/) is Faculty Advisor.
+- Annual Report, [May 31, 2018](https://saamusc.github.io/img/SAA_Missouri_2017.pdf).
+
+**2017**:
+- Jennifer Walker (`President`), Alora Bauer (`Vice President`), Erin Niederberger (`Secretary`), Brian Flanagin (`Treasurer`), Katie Wibbenmeyer (`LISGSA Liaison`), & Dylan Martin (`Communication Chair`). [Sarah Buchanan](http://faculty.missouri.edu/buchanans/) is Faculty Advisor.
+- Annual Report, [May 31, 2017](https://saamusc.github.io/img/SAA_Missouri_2016_2017.pdf).
+
+**Below is our `Constitution`**
+
+-------------------------
+
 Spring 2017 saw us taking sequential steps to establish our new student chapter on campus and in the [LIS Program](http://sislt.missouri.edu/lis/). To facilitate communication we maintain a:
 - [Twitter](https://twitter.com/SAAMUSC) profile (est. 12/5/16)
 - [listserv](https://po.missouri.edu/cgi-bin/wa?A0=SAAMUSC-L) (est. 1/31/17)
@@ -19,18 +31,6 @@ We also drafted and then voted on bylaws, approved on 2/18/17 by the membership:
 - [SAAMUSC Constitution, 20170218](/img/SAAMUSC_Constitution.pdf). [SAAMUSC Constitution, 201810](/img/SAAMUSC_Constitution_Rev_10_18.pdf).
 
 In sum, we attended an info session on [1/24](https://orgsync.com/35463/events/1505629/occurrences/3427731) and [4/17](https://orgsync.com/35463/events/1516284/occurrences/3904497), applied for recognition by the MU ORG Office on 2/20 (approved! on 3/23), voted on officers from Mar 6-9, seated our elected, inaugural officers on Mon Mar 13, and submitted our materials to [SAA Council](http://www2.archivists.org/governance/handbook/section13) for consideration at their [May 16-17, 2017](http://www2.archivists.org/groups/saa-council/may-16-17-2017-council-meeting-agenda) meeting (chartered! [on 5/16](https://www2.archivists.org/news/2017/saa-council-approves-fy18-budget-issue-briefs-and-more)).
-
-**Below are our `Officers`**
-
--------------------------
-
-**2018**:
-- Rebecca Benson (`President`), Elizabeth Winter (`Vice President`), Alisa Pappas (`Secretary`), Melody Edwards (`Treasurer`), Brian Flanagin (`Communication Chair`), & Hali Allen + Jennifer Walker (`Programming Co-Chairs`). [Sarah Buchanan](http://faculty.missouri.edu/buchanans/) is Faculty Advisor.
-- Annual Report, [May 31, 2018](https://saamusc.github.io/img/SAA_Missouri_2017.pdf).
-
-**2017**:
-- Jennifer Walker (`President`), Alora Bauer (`Vice President`), Erin Niederberger (`Secretary`), Brian Flanagin (`Treasurer`), Katie Wibbenmeyer (`LISGSA Liaison`), & Dylan Martin (`Communication Chair`). [Sarah Buchanan](http://faculty.missouri.edu/buchanans/) is Faculty Advisor.
-- Annual Report, [May 31, 2017](https://saamusc.github.io/img/SAA_Missouri_2016_2017.pdf).
 
 Thank you for your interest and support!
 
