--- a/_posts/2000-01-03-officers.md
+++ b/_posts/2000-01-03-officers.md
@@ -7,6 +7,9 @@ fa-icon: toggle-on
 
 ## Leadership
 
+**2019**:
+- David Merz (`President`), Logan Thompson (`Vice President`), Sarah Gabriel (`Secretary`), & Ethan Atwell (`Treasurer`). [Prof. Sarah Buchanan](http://faculty.missouri.edu/buchanans/) is Faculty Advisor.
+
 **2018**:
 - Rebecca Benson (`President`), Elizabeth Winter (`Vice President`), Alisa Pappas (`Secretary`), Melody Edwards (`Treasurer`), Brian Flanagin (`Communication Chair`), & Hali Allen + Jennifer Walker (`Programming Co-Chairs`). [Prof. Sarah Buchanan](http://faculty.missouri.edu/buchanans/) is Faculty Advisor.
 - Annual Report, [for May 31, 2019](https://saamusc.github.io/img/SAA_Missouri_2018.pdf).
