Add 2020 officers, 2019 Report dates clarity, ACA.

--- a/_posts/2000-01-03-officers.md
+++ b/_posts/2000-01-03-officers.md
@@ -7,16 +7,20 @@ fa-icon: toggle-on
 
 ## Leadership
 
+**2020**:
+- Ellen Thieme (`President`), Katie Dieckhaus (`Vice President`), Haley Frizzle (`Secretary`), Shelby Catalano (`Treasurer`), Wendy Midyett (`LISGSA Liaison`), Sammy Sendejas (`Communication Chair`), & Denise Chappell (`Program Chair`). [Prof. Sarah Buchanan](http://faculty.missouri.edu/buchanans/) is Faculty Advisor.
+
 **2019**:
 - David Merz (`President`), Logan Thompson (`Vice President`), Sarah Gabriel (`Secretary`), & Ethan Atwell (`Treasurer`). [Prof. Sarah Buchanan](http://faculty.missouri.edu/buchanans/) is Faculty Advisor.
+- Annual Report, [for 2019](https://saamusc.github.io/img/SAA_Missouri_2019.pdf).
 
 **2018**:
 - Rebecca Benson (`President`), Elizabeth Winter (`Vice President`), Alisa Pappas (`Secretary`), Melody Edwards (`Treasurer`), Brian Flanagin (`Communication Chair`), & Hali Allen + Jennifer Walker (`Programming Co-Chairs`). [Prof. Sarah Buchanan](http://faculty.missouri.edu/buchanans/) is Faculty Advisor.
-- Annual Report, [for May 31, 2019](https://saamusc.github.io/img/SAA_Missouri_2018.pdf).
+- Annual Report, [for 2018](https://saamusc.github.io/img/SAA_Missouri_2018.pdf).
 
 **2017**:
 - Jennifer Walker (`President`), Alora Bauer (`Vice President`), Erin Niederberger (`Secretary`), Brian Flanagin + Dylan Martin (`Treasurer`), Katie Wibbenmeyer (`LISGSA Liaison`), & Dylan Martin (`Communication Chair`). [Prof. Sarah Buchanan](http://faculty.missouri.edu/buchanans/) is Faculty Advisor.
-- Annual Report, [for May 31, 2018](https://saamusc.github.io/img/SAA_Missouri_2017.pdf).
+- Annual Report, [for 2017](https://saamusc.github.io/img/SAA_Missouri_2017.pdf).
 - Annual Report, [for May 31, 2017](https://saamusc.github.io/img/SAA_Missouri_2016_2017.pdf).
 
 [Email](mailto:SAAMUSC@gmail.com) us! **Below is our `Constitution`**
@@ -30,7 +34,8 @@ Spring 2017 saw us taking sequential steps to establish our new student chapter 
 - [email](mailto:SAAMUSC@gmail.com) account (est. 4/14/17)
 - [website](https://saamusc.github.io/) (est. 4/11/17)
 - [SAA Student Chapter](https://www2.archivists.org/students/chapters/university-of-missouri) profile (est. 5/22/17)
-- ...and we're listed in the SAA DAE [Directory of Archival Education](https://www2.archivists.org/dae/university-of-missouri) (2018)
+- ...we're listed in the SAA DAE [Directory of Archival Education](https://www2.archivists.org/dae/university-of-missouri) (2018)
+- and Archival Studies emphasis is pre-approved by the [ACA](https://www.certifiedarchivists.org/get-certified/aca-graduate-course-preapproval-program/aca-approved-archival-programs-courses/#MO) for their examination (2019).
 
 We also drafted and then voted on bylaws, approved on 2/18/17 by the membership:
 - [SAAMUSC Constitution 20170218](/img/SAAMUSC_Constitution.pdf). [SAAMUSC Constitution 201810](/img/SAAMUSC_Constitution_Rev201810.pdf).
