Edit A&RM spec to AS emphasis.

--- a/_posts/2000-01-07-mizzou.md
+++ b/_posts/2000-01-07-mizzou.md
@@ -7,7 +7,7 @@ fa-icon: film
 
 ## #mizzoumade
 
-SISLT graduate courses in the Archives and Records Management specialization adhere to the SAA Guidelines for a Graduate Program in Archival Studies [[GPAS](http://www2.archivists.org/category/tags/gpas)].
+SISLT graduate courses in the Archival Studies emphasis adhere to the SAA Guidelines for a Graduate Program in Archival Studies [[GPAS](http://www2.archivists.org/category/tags/gpas)].
 
 The Library and Information Science program at Mizzou celebrates its [50th anniversary](http://sislt.missouri.edu/lis/#program-history) in 2016-17. We launched our celebration at the [SISLT Reception](http://sislt.missouri.edu/sislt_events/sislt-reception-at-mla/), [MLA 2016](http://molib.org/conference/2016-conference/).
 
