Edit A&RM spec to AS emph.

--- a/_posts/2000-01-05-join.md
+++ b/_posts/2000-01-05-join.md
@@ -22,7 +22,7 @@ Below we provide links to further information:
 - apply: [Ph.D.](http://sislt.missouri.edu/islt/) in Information Science and Learning Technologies
 - enroll: view courses and enroll at [myZou](http://sislt.missouri.edu/lis/students/#enroll)
 
-In addition to an archives and records management specialization (of archives courses) within the LIS master's program, students complete a [Practicum](http://sislt.missouri.edu/lis/practicum/#practicum).
+In addition to an Archival Studies emphasis (of three courses) within the LIS master's program, students complete a [Practicum](http://sislt.missouri.edu/lis/practicum/#practicum).
 
 SAA represents more than 6,200 professional archivists employed by governments, universities, businesses, libraries, and historical organizations nationally!
 
