Add 2021 officers, 2020 Report, FB.

--- a/_posts/2000-01-03-officers.md
+++ b/_posts/2000-01-03-officers.md
@@ -7,8 +7,12 @@ fa-icon: toggle-on
 
 ## Leadership
 
+**2021**:
+- Shelby Catalano (`President`), Katie Dieckhaus (`Vice President`), Alejandra Hutchison (`Secretary`), Jara Anderson (`Treasurer`), Niki Cox (`LISGSA Liaison`), Hope Oliver + Sammy Sendejas (`Communication Chairs`), & Marie Bergman + Jackie Cruikshank Vogt + Emily Lempka (`Program Chairs`). [Prof. Sarah Buchanan](http://faculty.missouri.edu/buchanans/) is Faculty Advisor.
+
 **2020**:
-- Ellen Thieme (`President`), Katie Dieckhaus (`Vice President`), Haley Frizzle (`Secretary`), Shelby Catalano (`Treasurer`), Wendy Midyett (`LISGSA Liaison`), Sammy Sendejas (`Communication Chair`), & Denise Chappell (`Program Chair`). [Prof. Sarah Buchanan](http://faculty.missouri.edu/buchanans/) is Faculty Advisor.
+- Ellen Thieme + Shelby Catalano (`President`), Katie Dieckhaus (`Vice President`), Haley Frizzle (`Secretary`), Shelby Catalano (`Treasurer`), Wendy Midyett (`LISGSA Liaison`), Sammy Sendejas (`Communication Chair`), & Denise Chappell (`Program Chair`). [Prof. Sarah Buchanan](http://faculty.missouri.edu/buchanans/) is Faculty Advisor.
+- Annual Report, [for 2020](https://saamusc.github.io/img/SAA_Missouri_2020.pdf).
 
 **2019**:
 - David Merz (`President`), Logan Thompson (`Vice President`), Sarah Gabriel (`Secretary`), & Ethan Atwell (`Treasurer`). [Prof. Sarah Buchanan](http://faculty.missouri.edu/buchanans/) is Faculty Advisor.
@@ -33,6 +37,7 @@ Spring 2017 saw us taking sequential steps to establish our new student chapter 
 - [MU ORG](https://orgsync.com/158099/chapter) profile (est. 4/14/17)
 - [email](mailto:SAAMUSC@gmail.com) account (est. 4/14/17)
 - [website](https://saamusc.github.io/) (est. 4/11/17)
+- [Facebook](https://www.facebook.com/Society-of-American-Archivists-at-University-of-Missouri-Student-Chapter-125454942594665/) (est. 7/28/20)
 - [SAA Student Chapter](https://www2.archivists.org/students/chapters/university-of-missouri) profile (est. 5/22/17)
 - ...we're listed in the SAA DAE [Directory of Archival Education](https://www2.archivists.org/dae/university-of-missouri) (2018)
 - and Archival Studies emphasis is pre-approved by the [ACA](https://www.certifiedarchivists.org/get-certified/aca-graduate-course-preapproval-program/aca-approved-archival-programs-courses/#MO) for their examination (2019).
