--- a/_posts/2000-01-03-officers.md
+++ b/_posts/2000-01-03-officers.md
@@ -7,6 +7,9 @@ fa-icon: toggle-on
 
 ## Leadership
 
+**2022**:
+- Liz Setterberg (`President`), Katherine Herrick (`Vice President`), Kevin Dao (`Secretary`), Jackie Cruikshank Vogt (`Treasurer`), Kelley Klor (`LISGSA Liaison`), Susan Ralls + Beth Stewart (`Communication Chairs`), & Matthew Frye + Susan Rosprim (`Program Chairs`). [Prof. Sarah Buchanan](https://buchanans.mufaculty.umsystem.edu/) is Faculty Advisor.
+
 **2021**:
 - Shelby Catalano (`President`), Katie Dieckhaus (`Vice President`), Alejandra Hutchison (`Secretary`), Jara Anderson (`Treasurer`), Niki Cox (`LISGSA Liaison`), Hope Oliver + Sammy Sendejas (`Communication Chairs`), & Marie Bergman + Jackie Cruikshank Vogt + Emily Lempka (`Program Chairs`). [Prof. Sarah Buchanan](http://faculty.missouri.edu/buchanans/) is Faculty Advisor.
 
