Add 2022 officers, 2021 Report.

--- a/_posts/2000-01-03-officers.md
+++ b/_posts/2000-01-03-officers.md
@@ -12,6 +12,7 @@ fa-icon: toggle-on
 
 **2021**:
 - Shelby Catalano (`President`), Katie Dieckhaus (`Vice President`), Alejandra Hutchison (`Secretary`), Jara Anderson (`Treasurer`), Niki Cox (`LISGSA Liaison`), Hope Oliver + Sammy Sendejas (`Communication Chairs`), & Marie Bergman + Jackie Cruikshank Vogt + Emily Lempka (`Program Chairs`). [Prof. Sarah Buchanan](http://faculty.missouri.edu/buchanans/) is Faculty Advisor.
+- Annual Report, [for 2021](https://saamusc.github.io/img/SAA_Missouri_2021.pdf).
 
 **2020**:
 - Ellen Thieme + Shelby Catalano (`President`), Katie Dieckhaus (`Vice President`), Haley Frizzle (`Secretary`), Shelby Catalano (`Treasurer`), Wendy Midyett (`LISGSA Liaison`), Sammy Sendejas (`Communication Chair`), & Denise Chappell (`Program Chair`). [Prof. Sarah Buchanan](http://faculty.missouri.edu/buchanans/) is Faculty Advisor.
