Add 2023 officers, 2022 Report & Insta.

--- a/_posts/2000-01-03-officers.md
+++ b/_posts/2000-01-03-officers.md
@@ -7,8 +7,12 @@ fa-icon: toggle-on
 
 ## Leadership
 
+**2023**:
+- Isaac Alexander (`President`), Kristen Brown (`Vice President`), Kayn Curry (`Secretary`), Joelle Blair (`Treasurer`), Kelley Klor (`LISGSA Liaison`), Lindy Baudendistel (`Communication Chair`), & Marcella Bogart (`Program Chair`). [Prof. Sarah Buchanan](https://buchanans.mufaculty.umsystem.edu/) is Faculty Advisor.
+
 **2022**:
 - Liz Setterberg (`President`), Katherine Herrick (`Vice President`), Kevin Dao (`Secretary`), Jackie Cruikshank Vogt (`Treasurer`), Kelley Klor (`LISGSA Liaison`), Susan Ralls + Beth Stewart (`Communication Chairs`), & Matthew Frye + Susan Rosprim (`Program Chairs`). [Prof. Sarah Buchanan](https://buchanans.mufaculty.umsystem.edu/) is Faculty Advisor.
+- Annual Report, [for 2022](https://saamusc.github.io/img/SAA_Missouri_2022.pdf).
 
 **2021**:
 - Shelby Catalano (`President`), Katie Dieckhaus (`Vice President`), Alejandra Hutchison (`Secretary`), Jara Anderson (`Treasurer`), Niki Cox (`LISGSA Liaison`), Hope Oliver + Sammy Sendejas (`Communication Chairs`), & Marie Bergman + Jackie Cruikshank Vogt + Emily Lempka (`Program Chairs`). [Prof. Sarah Buchanan](http://faculty.missouri.edu/buchanans/) is Faculty Advisor.
@@ -47,7 +51,7 @@ Spring 2017 saw us taking sequential steps to establish our new student chapter 
 - and Archival Studies emphasis is pre-approved by the [ACA](https://www.certifiedarchivists.org/get-certified/aca-graduate-course-preapproval-program/aca-approved-archival-programs-courses/#MO) for their examination (2019).
 
 We also drafted and then voted on bylaws, approved on 2/18/17 by the membership:
-- [SAAMUSC Constitution 20170218](/img/SAAMUSC_Constitution.pdf). [SAAMUSC Constitution 201810](/img/SAAMUSC_Constitution_Rev201810.pdf).
+- [SAAMUSC Constitution 202210](/img/SAAMUSC_Constitution_Rev202210.pdf). [SAAMUSC Constitution 201810](/img/SAAMUSC_Constitution_Rev201810.pdf). [SAAMUSC Constitution 20170218](/img/SAAMUSC_Constitution.pdf).
 
 In sum, we attended an info session on [1/24](https://orgsync.com/35463/events/1505629/occurrences/3427731) and [4/17](https://orgsync.com/35463/events/1516284/occurrences/3904497), applied for recognition by the MU ORG Office on 2/20 (approved! on 3/23), voted on officers from Mar 6-9, seated our elected, inaugural officers on Mon Mar 13, and submitted our materials to [SAA Council](http://www2.archivists.org/governance/handbook/section13) for consideration at their [May 16-17, 2017](http://www2.archivists.org/groups/saa-council/may-16-17-2017-council-meeting-agenda) meeting (chartered! [on 5/16](https://www2.archivists.org/news/2017/saa-council-approves-fy18-budget-issue-briefs-and-more)).
 
