Add Comms Insta.

--- a/_posts/2000-01-03-officers.md
+++ b/_posts/2000-01-03-officers.md
@@ -46,6 +46,7 @@ Spring 2017 saw us taking sequential steps to establish our new student chapter 
 - [email](mailto:SAAMUSC@gmail.com) account (est. 4/14/17)
 - [website](https://saamusc.github.io/) (est. 4/11/17)
 - [Facebook](https://www.facebook.com/Society-of-American-Archivists-at-University-of-Missouri-Student-Chapter-125454942594665/) (est. 7/28/20)
+- [Instagram](https://www.instagram.com/saamu_students/) (est. 5/4/22)
 - [SAA Student Chapter](https://www2.archivists.org/students/chapters/university-of-missouri) profile (est. 5/22/17)
 - ...we're listed in the SAA DAE [Directory of Archival Education](https://www2.archivists.org/dae/university-of-missouri) (2018)
 - and Archival Studies emphasis is pre-approved by the [ACA](https://www.certifiedarchivists.org/get-certified/aca-graduate-course-preapproval-program/aca-approved-archival-programs-courses/#MO) for their examination (2019).
