Add Comms MU ORG 2022.

--- a/_posts/2000-01-03-officers.md
+++ b/_posts/2000-01-03-officers.md
@@ -42,7 +42,7 @@ fa-icon: toggle-on
 Spring 2017 saw us taking sequential steps to establish our new student chapter on campus and in the [LIS Program](http://sislt.missouri.edu/lis/). To facilitate communication we maintain a:
 - [Twitter](https://twitter.com/SAAMUSC) profile (est. 12/5/16)
 - [listserv](https://po.missouri.edu/SCRIPTS/wa.exe?A0=SAAMUSC-L) (est. 1/31/17, [relocated 2022](https://po.missouri.edu/cgi-bin/wa?A0=SAAMUSC-L))
-- [MU ORG](https://missouri.campuslabs.com/engage/organization/society-of-american-archivists-mu-sc) profile (est. 4/14/17, [relocated 2021](https://orgsync.com/158099/chapter))
+- [MU ORG](https://engage.missouri.edu/SAAatMUStudentChapter/) profile (est. 4/14/17, [relocated 2021](https://orgsync.com/158099/chapter), [relocated 2022](https://missouri.campuslabs.com/engage/organization/society-of-american-archivists-mu-sc))
 - [email](mailto:SAAMUSC@gmail.com) account (est. 4/14/17)
 - [website](https://saamusc.github.io/) (est. 4/11/17)
 - [Facebook](https://www.facebook.com/Society-of-American-Archivists-at-University-of-Missouri-Student-Chapter-125454942594665/) (est. 7/28/20)
