Add Comms ACA 2022.

--- a/_posts/2000-01-03-officers.md
+++ b/_posts/2000-01-03-officers.md
@@ -49,7 +49,7 @@ Spring 2017 saw us taking sequential steps to establish our new student chapter 
 - [Instagram](https://www.instagram.com/saamu_students/) (est. 5/4/22)
 - [SAA Student Chapter](https://www2.archivists.org/students/chapters/university-of-missouri) profile (est. 5/22/17)
 - ...we're listed in the SAA DAE [Directory of Archival Education](https://www2.archivists.org/dae/university-of-missouri) (2018)
-- and Archival Studies emphasis is pre-approved by the [ACA](https://www.certifiedarchivists.org/get-certified/aca-graduate-course-preapproval-program/aca-approved-archival-programs-courses/#MO) for their examination (2019).
+- and Archival Studies emphasis is pre-approved by the [ACA](https://www.certifiedarchivists.org/index.php/approved-courses) for their examination (2019) (relinked [2022](https://www.certifiedarchivists.org/get-certified/aca-graduate-course-preapproval-program/aca-approved-archival-programs-courses/#MO)).
 
 We also drafted and then voted on bylaws, approved on 2/18/17 by the membership:
 - [SAAMUSC Constitution 202210](/img/SAAMUSC_Constitution_Rev202210.pdf). [SAAMUSC Constitution 201810](/img/SAAMUSC_Constitution_Rev201810.pdf). [SAAMUSC Constitution 20170218](/img/SAAMUSC_Constitution.pdf).
