Add 2024 officers, 2023 Report.

--- a/_posts/2000-01-03-officers.md
+++ b/_posts/2000-01-03-officers.md
@@ -7,8 +7,12 @@ fa-icon: toggle-on
 
 ## Leadership
 
+**2024**:
+- Amanda May (`President`), Noah Larson (`Vice President`), Madison Stein (`Secretary`), Dahlia Bray (`Treasurer`), Jordan Johnson + Max Morgan (`LISGSA Liaisons`), Max Pont (`Communication Chair`), & Mackenzie Schulte (`Program Chair`). [Prof. Sarah Buchanan](https://buchanans.mufaculty.umsystem.edu/) is Faculty Advisor.
+
 **2023**:
 - Isaac Alexander (`President`), Kristen Brown (`Vice President`), Kayn Curry (`Secretary`), Joelle Blair (`Treasurer`), Kelley Klor (`LISGSA Liaison`), Lindy Baudendistel (`Communication Chair`), & Marcella Bogart (`Program Chair`). [Prof. Sarah Buchanan](https://buchanans.mufaculty.umsystem.edu/) is Faculty Advisor.
+- Annual Report, [for 2023](https://saamusc.github.io/img/SAA_Missouri_2023.pdf).
 
 **2022**:
 - Liz Setterberg (`President`), Katherine Herrick (`Vice President`), Kevin Dao (`Secretary`), Jackie Cruikshank Vogt (`Treasurer`), Kelley Klor (`LISGSA Liaison`), Susan Ralls + Beth Stewart (`Communication Chairs`), & Matthew Frye + Susan Rosprim (`Program Chairs`). [Prof. Sarah Buchanan](https://buchanans.mufaculty.umsystem.edu/) is Faculty Advisor.
