--- a/_posts/2000-01-03-officers.md
+++ b/_posts/2000-01-03-officers.md
@@ -7,6 +7,9 @@ fa-icon: toggle-on
 
 ## Leadership
 
+**2025**:
+- Kat Zinn (`President`), Nikki L'Amour (`Vice President`), Jordan Stanley (`Communications Secretary`), Dahlia Bray (`Treasurer`), Elisabeth Barber + Meghan Bell (`LISGSA Liaisons`), & Amanda May + Jordan Riggs (`Program Chairs`). [Prof. Sarah Buchanan](https://buchanans.mufaculty.umsystem.edu/) is Faculty Advisor.
+
 **2024**:
 - Amanda May (`President`), Noah Larson (`Vice President`), Madison Stein (`Secretary`), Dahlia Bray (`Treasurer`), Jordan Johnson + Max Morgan (`LISGSA Liaisons`), Max Pont (`Communication Chair`), & Mackenzie Schulte (`Program Chair`). [Prof. Sarah Buchanan](https://buchanans.mufaculty.umsystem.edu/) is Faculty Advisor.
 
